@@ -1,3 +1,5 @@
+- WGSW-357 ensure that ploidy conflict filter is consistently applied for all
+records with no coverage/unknown genotype
 v2.3.9
 - STARKA-231 correct codon phasing for insertions/small-fragments within the
 phasing range
